Fixed IsObjectTest